fixed position of background on small screens

--- a/src/components/background.scss
+++ b/src/components/background.scss
@@ -1,11 +1,11 @@
 #background {
     position: fixed;
-    bottom: -3em;
+    bottom: -23em;
     height: 90vh;
     width: calc(100vw - 10px);
     min-width: 1000px;
     z-index: -1;
-  overflow: hidden;
+    overflow: hidden;
 
     #sun{
       // z-index: -1;
